Add flash message to application.html.erb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,6 +36,8 @@
   </header>
   
   <body>
+    <p class="text-success"><%= notice %></p>
+    <p class="text-danger"><%= alert %></p>
     <%= yield %>
   </body>
 </html>
