Add link_to top page to header

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   </head>
   
   <header>
+    <li>
+      <%= link_to "トップページ", root_path %>
+    </li>
     <% if admin_signed_in? %>
       <li>
         <%= link_to "管理者ログアウト", destroy_admin_session_path, method: :delete %>
