--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,9 @@
       <li>
         <%= link_to "ログイン", new_user_session_path %>
       </li>
+      <li>
+        <%= link_to "ゲストログイン", users_guest_sign_in_path, method: :post %>
+      </li>
     <% end %>
     <p>admin:<span class="text-danger"><%= current_admin.name if admin_signed_in? %></span></p>
     <p>user:<span class="text-info"><%= current_user.name if user_signed_in? %></span></p>
